--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
-name: "Wait for Netlify Preview"
-description: "Wait for Netlify Deploy Preview to complete for commit"
+name: "Wait for Netlify Deploy"
+description: "Wait for Netlify Deploy Preview to complete for a commit"
 branding:
   icon: "clock"
   color: "blue"
